# LEG_RUST_BOT

./: Cargo.toml
migrations/2021-10-11-131707_create_odais/: up.sql
src/: main.rs  schema.rs
src/commands/: mod.rs  suhjong.rs
