[package]
name = "discord-bot-rust"
version = "0.1.0"
authors = ["LEGEND"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
rand = "0.8.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

serenity = {version = "0.10.7", features = ["framework", "standard_framework"]}

tokio = {version = "1.6.0", features = ["macros", "rt-multi-thread"]}
