[package]
name = "discord-bot-rust"
version = "0.1.0"
authors = ["LEGEND"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"

serenity = { version = "0.11.5", features = ["client", "framework", "standard_framework", "voice", "rustls_backend"] }

tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }

songbird = { version = "0.3.0", features = ["builtin-queue"] }

diesel = { version = "2.0.2", features = ["postgres", "chrono"] }

dotenv = "0.15.0"

cron = "0.12.0"

chrono = "0.4.23"

regex = "1.7.0"
